Start building the header

--- a/index.html
+++ b/index.html
@@ -12,18 +12,135 @@
     </head>
 
     <body>
-        <!-- Hero Section -->
-        <section class="section section--hero">
+        <!-- Header -->
+        <!-- <header class="header">
             <div class="container">
-                <h1>Funnsies</h1>
-                <h2>Just some fun stuff.</h2>
+                <div class="header--left">
+                    <div class="search">
+                        <i class="fa fa-search"></i>
+                    </div>
+                </div>
+
+                <div class="header--center">
+                    <nav class="nav--utility">
+                        <ul>
+                            <li><a href="#">Utility Link</a></li>
+                            <li><a href="#">Utility Link</a></li>
+                            <li><a href="#"><img src="http://placeholder.pics/svg/350x75/575E6B/82BCB9-575E6B" alt="Logo"></a></li>
+                            <li><a href="#">Utility Link</a></li>
+                            <li><a href="#">Utility Link</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+
+                <div class="header--right">
+                    <a href="tel:5555555555"><i class="fa fa-phone"></i> 555.555.5555</a>
+                </div>
             </div>
-        </section>
+        </header> -->
+
+        <header class="header header--mobile">
+            <div class="container cf">
+                <div class="header--left">
+                    <a href="#" class="search">
+                        <i class="fa fa-search"></i>
+                    </a>
+                </div>
+
+                <div class="header--center">
+                    <a href="#"><img class="logo" src="http://placeholder.pics/svg/350x75/575E6B/82BCB9-575E6B" alt="Logo"></a>
+                </div>
+
+                <div class="header--right">
+                    <a href="#" class="js-toggle-menu">Menu</a>
+                </div>
+            </div>
+
+            <div class="container">
+                <nav class="nav nav--mobile">
+                    <ul class="nav nav--utility">
+                        <li><a href="#">Utility Link</a></li>
+                        <li>
+                            <a href="#">Utility Link</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Utility Link</a></li>
+                                <li><a href="#">Child Utility Link</a></li>
+                                <li><a href="#">Child Utility Link</a></li>
+                                <li><a href="#">Child Utility Link</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Utility Link</a></li>
+                        <li>
+                            <a href="#">Utility Link</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Utility Link</a></li>
+                                <li><a href="#">Child Utility Link</a></li>
+                                <li><a href="#">Child Utility Link</a></li>
+                                <li><a href="#">Child Utility Link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                    <ul class="nav nav--main">
+                        <li>
+                            <a href="#">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Parent</a></li>
+                        <li><a href="#">Parent</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <!-- Main content -->
+        <main>
+            <!-- Hero Section -->
+            <section class="section section--hero">
+                <div class="container">
+                    <h1>Distillery street art</h1>
+                </div>
+            </section>
+        </main>
 
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
-                <p>Built with <i class="fa fa-heart"></i> by <a href="http://kylebrumm.com">Kyle Brumm</a></p>
+                footer
             </div>
         </footer>
 
