--- a/index.html
+++ b/index.html
@@ -52,78 +52,76 @@
                 </div>
 
                 <div class="header--right">
-                    <a href="#" class="js-toggle-menu">Menu</a>
+                    <a href="#" class="toggle-menu js-toggle-menu">Menu</a>
                 </div>
             </div>
 
-            <div class="container">
-                <nav class="nav nav--mobile">
-                    <ul class="nav nav--utility">
-                        <li><a href="#">Utility Link</a></li>
-                        <li>
-                            <a href="#">Utility Link</a>
-                            <ul class="child-menu">
-                                <li><a href="#">Child Utility Link</a></li>
-                                <li><a href="#">Child Utility Link</a></li>
-                                <li><a href="#">Child Utility Link</a></li>
-                                <li><a href="#">Child Utility Link</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Utility Link</a></li>
-                        <li>
-                            <a href="#">Utility Link</a>
-                            <ul class="child-menu">
-                                <li><a href="#">Child Utility Link</a></li>
-                                <li><a href="#">Child Utility Link</a></li>
-                                <li><a href="#">Child Utility Link</a></li>
-                                <li><a href="#">Child Utility Link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+            <nav class="nav nav--mobile">
+                <ul class="nav--utility">
+                    <li><a href="#">Utility Link</a></li>
+                    <li>
+                        <a href="#" class="has-child-menu">Utility Link</a>
+                        <ul class="child-menu">
+                            <li><a href="#">Child Utility Link</a></li>
+                            <li><a href="#">Child Utility Link</a></li>
+                            <li><a href="#">Child Utility Link</a></li>
+                            <li><a href="#">Child Utility Link</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Utility Link</a></li>
+                    <li>
+                        <a href="#" class="has-child-menu">Utility Link</a>
+                        <ul class="child-menu">
+                            <li><a href="#">Child Utility Link</a></li>
+                            <li><a href="#">Child Utility Link</a></li>
+                            <li><a href="#">Child Utility Link</a></li>
+                            <li><a href="#">Child Utility Link</a></li>
+                        </ul>
+                    </li>
+                </ul>
 
-                    <ul class="nav nav--main">
-                        <li>
-                            <a href="#">Parent</a>
-                            <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Parent</a>
-                            <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Parent</a>
-                            <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Parent</a>
-                            <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Parent</a>
-                            <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Parent</a></li>
-                        <li><a href="#">Parent</a></li>
-                    </ul>
-                </nav>
-            </div>
+                <ul class="nav--main">
+                    <li>
+                        <a href="#" class="has-child-menu">Parent</a>
+                        <ul class="child-menu">
+                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child Link</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" class="has-child-menu">Parent</a>
+                        <ul class="child-menu">
+                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child Link</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" class="has-child-menu">Parent</a>
+                        <ul class="child-menu">
+                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child Link</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" class="has-child-menu">Parent</a>
+                        <ul class="child-menu">
+                            <li><a href="#">Child Link</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" class="has-child-menu">Parent</a>
+                        <ul class="child-menu">
+                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child Link</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Parent</a></li>
+                    <li><a href="#">Parent</a></li>
+                </ul>
+            </nav>
         </header>
 
         <!-- Main content -->
