Add the search overlay

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     </head>
 
     <body>
+        <!-- Search overlay -->
+        <div class="overlay--search">
+            <div class="centerer">
+                <p>Search the site <a href="#" class="js-toggle-search"><i class="fa fa-close"></i></a></p>
+
+                <form class="search-form">
+                    <i class="fa fa-search"></i> <input type="text">
+                </form>
+            </div>
+        </div>
+
         <!-- Header -->
         <!-- <header class="header">
             <div class="container">
@@ -39,10 +50,11 @@
             </div>
         </header> -->
 
+        <!-- Mobile header -->
         <header class="header header--mobile">
             <div class="container cf">
                 <div class="header--left">
-                    <a href="#" class="search">
+                    <a href="#" class="search js-toggle-search">
                         <i class="fa fa-search"></i>
                     </a>
                 </div>
