Finish mobile header

--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@
                     <li><a href="#">Parent</a></li>
                 </ul>
             </nav>
+
+            <div class="container header--actions">
+                <a href="#" class="btn btn-small btn-secondary btn-3d">Gluten-free</a>
+                <a href="#" class="btn btn-small btn-primary btn-3d">Pork belly</a>
+                <div class="call">
+                    or call <a href="tel:5555555555">555.555.5555</a>
+                </div>
+            </div>
         </header>
 
         <!-- Main content -->
