Build the rest of the page's skeleton

--- a/index.html
+++ b/index.html
@@ -148,16 +148,90 @@
         <main>
             <!-- Hero Section -->
             <section class="section section--hero">
-                <div class="container">
+                <div class="centerer">
                     <h1>Distillery street art</h1>
+                </div>
+
+                <div class="caption">
+                    <strong>Caption title</strong>, subtitle
+                </div>
+
+                <div class="contact-box">
+                    <a href="#" class="btn btn-primary btn-3d">Next level</a>
+                    <p>Call: <a href="tel:5555555555">555.555.555</a></p>
+                </div>
+            </section>
+
+            <!-- Content Section -->
+            <section class="section section--content">
+                <div class="container">
+                    <div class="g">
+                        <div class="gi gi-m-9">
+                            <p class="lead">
+                                Taxidermy artisan tofu kickstarter, fingerstache pitchfork chia aesthetic asymmetrical banjo farm-to-table etsy hella.  Aesthetic portland readymade yr, chambray keytar.
+                            </p>
+
+                            <p>
+                                Normcore XOXO pug cred blog.  Artisan PBR&amp;B green juice listicle.  Tattooed man braid butcher, pork belly post-ironic chia etsy kogi letterpress +1 photo booth.  Yuccie ennui pickled meh pitchfork aesthetic brooklyn letterpress.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Quote Section -->
+            <section class="section section--quote">
+                <div class="container">
+                    <blockquote>
+                        "Sriracha wayfarers migas intelligentsia man bun, waistcoat distillery +1 master cleanse banh mi chambray readymade 8-bit post-ironic.  Art party forage pabst asymmetrical flexitarian, try-hard schlitz 8-bit bicycle rights tumblr dreamcatcher kitsch pour-over thundercats umami.  Four dollar toast retro cred, bitters synth raw denim bicycle rights."
+
+                        <div class="credit"><strong>Author</strong>, <small>C.E.O.</small></div>
+                    </blockquote>
                 </div>
             </section>
         </main>
 
+        <!-- Pre-footer -->
+        <section class="section section--pre-footer">
+            <div class="container">
+                <ul class="list-inline list-social">
+                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+                </ul>
+
+                <div class="footer-action">
+                    <a href="#" class="btn btn-primary btn-3d">Quinoa sriracha</a>
+                </div>
+            </div>
+        </section>
+
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
-                footer
+                <div class="g g-m-2">
+                    <div class="gi">
+                        <p>
+                            <strong>Bicycle rights</strong> 555 N Main Street, Des Moines, IA 50265
+                        </p>
+
+                        <p>
+                            <a href="tel:5555555555">1.555.555.5555</a>
+                        </p>
+                    </div>
+
+                    <div class="gi">
+                        <p>
+                            <em>&copy; Bicycle rights. All rights reserved</em>
+                        </p>
+
+                        <ul class="list-inline">
+                            <li><a href="#">Disclosure</a></li>
+                            <li><a href="#">Privacy Statement</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </footer>
 
