Finish mobile layout

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             <!-- Hero Section -->
             <section class="section section--hero">
                 <div class="centerer">
-                    <h1>Distillery street art</h1>
+                    <h1>Distillery <strong>street art</strong></h1>
+                    <a href="#" class="btn btn-secondary btn-3d">Next level</a>
                 </div>
 
                 <div class="caption">
@@ -172,7 +173,7 @@
                             </p>
 
                             <p>
-                                Normcore XOXO pug cred blog.  Artisan PBR&amp;B green juice listicle.  Tattooed man braid butcher, pork belly post-ironic chia etsy kogi letterpress +1 photo booth.  Yuccie ennui pickled meh pitchfork aesthetic brooklyn letterpress.
+                                Normcore XOXO pug cred blog.  Artisan PBR green juice listicle.  Tattooed man braid butcher, pork belly post-ironic chia etsy kogi letterpress +1 photo booth.  Yuccie ennui pickled meh pitchfork aesthetic brooklyn letterpress.
                             </p>
                         </div>
                     </div>
@@ -183,7 +184,7 @@
             <section class="section section--quote">
                 <div class="container">
                     <blockquote>
-                        "Sriracha wayfarers migas intelligentsia man bun, waistcoat distillery +1 master cleanse banh mi chambray readymade 8-bit post-ironic.  Art party forage pabst asymmetrical flexitarian, try-hard schlitz 8-bit bicycle rights tumblr dreamcatcher kitsch pour-over thundercats umami.  Four dollar toast retro cred, bitters synth raw denim bicycle rights."
+                        "Sriracha wayfarers migas intelligentsia man bun, waistcoat distillery +1 master cleanse banh mi chambray readymade 8-bit post-ironic.  Art party forage pabst asymmetrical flexitarian, try-hard schlitz 8-bit bicycle rights tumblr dreamcatcher kitsch pour-over thundercats umami.  <strong>Four dollar toast retro cred, bitters synth raw denim bicycle rights</strong>."
 
                         <div class="credit"><strong>Author</strong>, <small>C.E.O.</small></div>
                     </blockquote>
