Start working on the desktop header

--- a/index.html
+++ b/index.html
@@ -23,32 +23,31 @@
         </div>
 
         <!-- Header -->
-        <!-- <header class="header">
+        <header class="header header--main">
             <div class="container">
                 <div class="header--left">
-                    <div class="search">
+                    <a href="#" class="search js-toggle-search">
                         <i class="fa fa-search"></i>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="header--center">
-                    <nav class="nav--utility">
-                        <ul>
+                    <nav class="nav--main">
+                        <ul class="list-inline nav--utility">
                             <li><a href="#">Utility Link</a></li>
                             <li><a href="#">Utility Link</a></li>
-                            <li><a href="#"><img src="http://placeholder.pics/svg/350x75/575E6B/82BCB9-575E6B" alt="Logo"></a></li>
+                            <li><a href="#"><img src="http://placeholder.pics/svg/300x65/575E6B/82BCB9-575E6B" alt="Logo"></a></li>
                             <li><a href="#">Utility Link</a></li>
                             <li><a href="#">Utility Link</a></li>
                         </ul>
                     </nav>
-
                 </div>
 
                 <div class="header--right">
                     <a href="tel:5555555555"><i class="fa fa-phone"></i> 555.555.5555</a>
                 </div>
             </div>
-        </header> -->
+        </header>
 
         <!-- Mobile header -->
         <header class="header header--mobile">
@@ -60,7 +59,7 @@
                 </div>
 
                 <div class="header--center">
-                    <a href="#"><img class="logo" src="http://placeholder.pics/svg/350x75/575E6B/82BCB9-575E6B" alt="Logo"></a>
+                    <a href="#"><img class="logo" src="http://placeholder.pics/svg/300x65/575E6B/82BCB9-575E6B" alt="Logo"></a>
                 </div>
 
                 <div class="header--right">
@@ -148,18 +147,22 @@
         <main>
             <!-- Hero Section -->
             <section class="section section--hero">
-                <div class="centerer">
-                    <h1>Distillery <strong>street art</strong></h1>
-                    <a href="#" class="btn btn-secondary btn-3d">Next level</a>
-                </div>
+                <div class="container">
+                    <div class="centerer">
+                        <h1>Distillery <strong>street art</strong></h1>
+                        <a href="#" class="btn btn-secondary btn-3d">Next level</a>
+                    </div>
 
-                <div class="caption">
-                    <strong>Caption title</strong>, subtitle
-                </div>
+                    <div class="caption">
+                        <strong>Caption title</strong>, subtitle
+                    </div>
 
-                <div class="contact-box">
-                    <a href="#" class="btn btn-primary btn-3d">Next level</a>
-                    <p>Call: <a href="tel:5555555555">555.555.555</a></p>
+                    <div class="contact-box">
+                        <p>
+                            <a href="#" class="btn btn-primary btn-3d">Next level</a>
+                        </p>
+                        <p>Call: <a href="tel:5555555555">555.555.555</a></p>
+                    </div>
                 </div>
             </section>
 
@@ -183,11 +186,15 @@
             <!-- Quote Section -->
             <section class="section section--quote">
                 <div class="container">
-                    <blockquote>
-                        "Sriracha wayfarers migas intelligentsia man bun, waistcoat distillery +1 master cleanse banh mi chambray readymade 8-bit post-ironic.  Art party forage pabst asymmetrical flexitarian, try-hard schlitz 8-bit bicycle rights tumblr dreamcatcher kitsch pour-over thundercats umami.  <strong>Four dollar toast retro cred, bitters synth raw denim bicycle rights</strong>."
+                    <div class="g">
+                        <div class="gi gi-l-8 gi-offset-l-4">
+                            <blockquote>
+                                "Sriracha wayfarers migas intelligentsia man bun, waistcoat distillery +1 master cleanse banh mi chambray readymade 8-bit post-ironic.  Art party forage pabst asymmetrical flexitarian, try-hard schlitz 8-bit bicycle rights tumblr dreamcatcher kitsch pour-over thundercats umami.  <strong>Four dollar toast retro cred, bitters synth raw denim bicycle rights</strong>."
 
-                        <div class="credit"><strong>Author</strong>, <small>C.E.O.</small></div>
-                    </blockquote>
+                                <div class="credit"><strong>Author</strong>, <small>C.E.O.</small></div>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
@@ -227,10 +234,9 @@
                             <em>&copy; Bicycle rights. All rights reserved</em>
                         </p>
 
-                        <ul class="list-inline">
-                            <li><a href="#">Disclosure</a></li>
-                            <li><a href="#">Privacy Statement</a></li>
-                        </ul>
+                        <p>
+                            <a href="#">Disclosure</a> | <a href="#">Privacy Statement</a>
+                        </p>
                     </div>
                 </div>
             </div>
