--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <!-- Header -->
-        <header class="header header--main">
+        <header class="header header--desktop">
             <div class="container">
                 <div class="header--left">
                     <a href="#" class="search js-toggle-search">
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="header--center">
-                    <nav class="nav--main">
+                    <nav class="nav--desktop">
                         <ul class="list-inline nav--utility">
                             <li><a href="#">Utility Link</a></li>
                             <li><a href="#">Utility Link</a></li>
@@ -46,6 +46,51 @@
                 <div class="header--right">
                     <a href="tel:5555555555"><i class="fa fa-phone"></i> 555.555.5555</a>
                 </div>
+            </div>
+            <div class="container">
+                <nav class="nav--desktop">
+                    <ul class="nav--main">
+                        <li>
+                            <a href="#" class="has-child-menu">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="has-child-menu">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="has-child-menu">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="has-child-menu">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="has-child-menu">Parent</a>
+                            <ul class="child-menu">
+                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child Link</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Parent</a></li>
+                        <li><a href="#">Parent</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
 
@@ -68,7 +113,7 @@
             </div>
 
             <nav class="nav nav--mobile">
-                <ul class="nav--utility">
+                <ul class="list-plain nav--utility">
                     <li><a href="#">Utility Link</a></li>
                     <li>
                         <a href="#" class="has-child-menu">Utility Link</a>
@@ -91,7 +136,7 @@
                     </li>
                 </ul>
 
-                <ul class="nav--main">
+                <ul class="list-plain nav--main">
                     <li>
                         <a href="#" class="has-child-menu">Parent</a>
                         <ul class="child-menu">
