--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 </div>
 
                 <div class="header--center">
-                    <nav class="nav--desktop">
+                    <nav class="nav nav--desktop">
                         <ul class="list-inline nav--utility">
                             <li><a href="#">Utility Link</a></li>
                             <li><a href="#">Utility Link</a></li>
-                            <li><a href="#"><img src="http://placeholder.pics/svg/300x65/575E6B/82BCB9-575E6B" alt="Logo"></a></li>
+                            <li><a href="#" class="logo"><img src="http://placeholder.pics/svg/300x65/575E6B/82BCB9-575E6B" alt="Logo"></a></li>
                             <li><a href="#">Utility Link</a></li>
                             <li><a href="#">Utility Link</a></li>
                         </ul>
@@ -47,48 +47,52 @@
                     <a href="tel:5555555555"><i class="fa fa-phone"></i> 555.555.5555</a>
                 </div>
             </div>
+        </header>
+
+        <header class="header header--desktop header--secondary">
             <div class="container">
-                <nav class="nav--desktop">
-                    <ul class="nav--main">
-                        <li>
-                            <a href="#" class="has-child-menu">Parent</a>
+                <nav class="nav nav--desktop">
+                    <ul class="list-inline nav--main">
+                        <li class="has-child-menu">
+                            <a href="#">Parent</a>
                             <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child link will go here</a></li>
+                                <li><a href="#">Child link will go here</a></li>
+                                <li><a href="#">Child link will go here</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="#" class="has-child-menu">Parent</a>
+                        <li class="has-child-menu">
+                            <a href="#">Parent</a>
                             <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child link will go here</a></li>
+                                <li><a href="#">Child link will go here</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="#" class="has-child-menu">Parent</a>
+                        <li class="has-child-menu">
+                            <a href="#">Parent</a>
                             <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child link will go here</a></li>
+                                <li><a href="#">Child link will go here</a></li>
+                                <li><a href="#">Child link will go here</a></li>
+                                <li><a href="#">Child link will go here</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="#" class="has-child-menu">Parent</a>
+                        <li class="has-child-menu">
+                            <a href="#">Parent</a>
                             <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child link will go here</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="#" class="has-child-menu">Parent</a>
+                        <li class="has-child-menu">
+                            <a href="#">Parent</a>
                             <ul class="child-menu">
-                                <li><a href="#">Child Link</a></li>
-                                <li><a href="#">Child Link</a></li>
+                                <li><a href="#">Child link will go here</a></li>
+                                <li><a href="#">Child link will go here</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Parent</a></li>
                         <li><a href="#">Parent</a></li>
+                        <li><a href="#" class="btn btn-secondary btn-small btn-3d">Fingerstache</a></li>
                     </ul>
                 </nav>
             </div>
@@ -115,21 +119,18 @@
             <nav class="nav nav--mobile">
                 <ul class="list-plain nav--utility">
                     <li><a href="#">Utility Link</a></li>
-                    <li>
-                        <a href="#" class="has-child-menu">Utility Link</a>
+                    <li class="has-child-menu">
+                        <a href="#">Utility Link</a>
                         <ul class="child-menu">
-                            <li><a href="#">Child Utility Link</a></li>
                             <li><a href="#">Child Utility Link</a></li>
                             <li><a href="#">Child Utility Link</a></li>
                             <li><a href="#">Child Utility Link</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Utility Link</a></li>
-                    <li>
-                        <a href="#" class="has-child-menu">Utility Link</a>
+                    <li class="has-child-menu">
+                        <a href="#">Utility Link</a>
                         <ul class="child-menu">
-                            <li><a href="#">Child Utility Link</a></li>
-                            <li><a href="#">Child Utility Link</a></li>
                             <li><a href="#">Child Utility Link</a></li>
                             <li><a href="#">Child Utility Link</a></li>
                         </ul>
@@ -137,41 +138,41 @@
                 </ul>
 
                 <ul class="list-plain nav--main">
-                    <li>
-                        <a href="#" class="has-child-menu">Parent</a>
+                    <li class="has-child-menu">
+                        <a href="#">Parent</a>
                         <ul class="child-menu">
-                            <li><a href="#">Child Link</a></li>
-                            <li><a href="#">Child Link</a></li>
-                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child link will go here</a></li>
+                            <li><a href="#">Child link will go here</a></li>
+                            <li><a href="#">Child link will go here</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#" class="has-child-menu">Parent</a>
+                    <li class="has-child-menu">
+                        <a href="#">Parent</a>
                         <ul class="child-menu">
-                            <li><a href="#">Child Link</a></li>
-                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child link will go here</a></li>
+                            <li><a href="#">Child link will go here</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#" class="has-child-menu">Parent</a>
+                    <li class="has-child-menu">
+                        <a href="#">Parent</a>
                         <ul class="child-menu">
-                            <li><a href="#">Child Link</a></li>
-                            <li><a href="#">Child Link</a></li>
-                            <li><a href="#">Child Link</a></li>
-                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child link will go here</a></li>
+                            <li><a href="#">Child link will go here</a></li>
+                            <li><a href="#">Child link will go here</a></li>
+                            <li><a href="#">Child link will go here</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#" class="has-child-menu">Parent</a>
+                    <li class="has-child-menu">
+                        <a href="#">Parent</a>
                         <ul class="child-menu">
-                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child link will go here</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#" class="has-child-menu">Parent</a>
+                    <li class="has-child-menu">
+                        <a href="#">Parent</a>
                         <ul class="child-menu">
-                            <li><a href="#">Child Link</a></li>
-                            <li><a href="#">Child Link</a></li>
+                            <li><a href="#">Child link will go here</a></li>
+                            <li><a href="#">Child link will go here</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Parent</a></li>
@@ -217,7 +218,7 @@
                     <div class="g">
                         <div class="gi gi-m-9">
                             <p class="lead">
-                                Taxidermy artisan tofu kickstarter, fingerstache pitchfork chia aesthetic asymmetrical banjo farm-to-table etsy hella.  Aesthetic portland readymade yr, chambray keytar.
+                                Taxidermy artisan tofu kickstarter, pitchfork chia aesthetic asymmetrical banjo farm-to-table etsy hella.  Aesthetic portland readymade yr, chambray keytar.
                             </p>
 
                             <p>
