Add dark overlay to section--background

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <!-- Main content -->
         <main>
             <!-- Hero Section -->
-            <section class="section section--hero">
+            <section class="section section--background section--hero">
                 <div class="container">
                     <div class="centerer">
                         <h1>Distillery <strong>street art</strong></h1>
@@ -230,7 +230,7 @@
             </section>
 
             <!-- Quote Section -->
-            <section class="section section--quote">
+            <section class="section section--background section--quote">
                 <div class="container">
                     <div class="g">
                         <div class="gi gi-l-8 gi-offset-l-4">
