Update the header logo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <ul class="list-inline nav--utility">
                             <li><a href="#">Utility Link</a></li>
                             <li><a href="#">Utility Link</a></li>
-                            <li><a href="#" class="logo"><img src="http://placeholder.pics/svg/300x65/575E6B/82BCB9-575E6B" alt="Logo"></a></li>
+                            <li><a href="#" class="logo"><img src="https://placeholdit.imgix.net/~text?txtsize=15&txt=300%C3%9765&w=300&h=65" alt="Logo"></a></li>
                             <li><a href="#">Utility Link</a></li>
                             <li><a href="#">Utility Link</a></li>
                         </ul>
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="header--center">
-                    <a href="#"><img class="logo" src="http://placeholder.pics/svg/300x65/575E6B/82BCB9-575E6B" alt="Logo"></a>
+                    <a href="#"><img class="logo" src="https://placeholdit.imgix.net/~text?txtsize=15&txt=300%C3%9765&w=300&h=65" alt="Logo"></a>
                 </div>
 
                 <div class="header--right">
